--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ python_files/feature_engineering/__pycache__/*
 .DS_Store
 football_predictions/OLD baseline_footballdata_merge_df.py
 __pycache__/
+*.egg-info
